# Nijika-bot

./: .env.dev  .gitignore  README.md  bot.py  plugins_conf.yaml  pyproject.toml
conf/: conf.toml
plugins/basic_plugins/ping/: __init__.py
plugins/plugins/web_bookmarks/: __init__.py
plugins/test_plugins/chat_history/: __init__.py  backup.py
plugins/test_plugins/essence_message/: __init__.py
plugins/test_plugins/git_remind/: __init__.py
plugins/test_plugins/luxun/: __init__.py
plugins/test_plugins/roll/: __init__.py
plugins/test_plugins/todo/: __init__.py
plugins/test_plugins/wakaru/: __init__.py
plugins/test_plugins/word_cloud/: __init__.py
src/plugins/rss/: __init__.py  bbc.py  conf.toml  config.py  core.py  panel.py  sub_manager.py
src/utils/configurator/: configurator.py
src/utils/crawler/: async_crawler.py  config.py  crawler.py  crawler_conf.toml
src/utils/token_bucket/: token_bucket.py
tests/: utils.py
tests/chat_history/: test_backup.py
tests/ping/: test_ping.py
tests/todo/: test_todo.py
utils/config/: path_config.py
utils/db/: db_manager.py
utils/db/source/: ryou.db  test.py  test2.py
utils/db/tests/: test_db_manager.py
utils/json/: json_parser.py
utils/plugin_loader/: plugin_loader.py
utils/plugin_loader/tests/: test_plugin_loader.py
