[tool.poetry]
name = "nijika-bot"
version = "0.1.0"
description = ""
authors = ["Suzuhara <lasnoire23@gmail.com>"]
readme = "README.md"
packages = [{include = "nijika_bot"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
